# cs100-lab5

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
header/: rectangle.hpp
src/: rectangle.cpp
tests/: test.cpp
